--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "compression": "^1.8.1",
     "dotenv": "^17.2.3",
     "helmet": "^8.1.0",
+    "mailersend": "^2.6.0",
     "nodemailer": "^6.9.13",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
